* Author: Mike FABIAN <mfabian@redhat.com>
* 13 Jan 2017 Released 1.5.17 version
* Update py-compile to current upstream version
* Also use ＿ U+FF3F FULLWIDTH LOW LINE as a separator for emoji keywords
* Unbreak sqlite on Python 3.6 (thanks to Jan Alexander Steffens)
* Return immediately if _update_candidates() is called with empty input (Resolves: rhbz#1413082)

* Author: Mike FABIAN <mfabian@redhat.com>
* 10 Jan 2017 Released 1.5.16 version
* Skip Korean test case also on Arch
* Remove everything following a tab (including the tab) from hunspell dictionary lines (Resolves: rhbz#1411659)
* Delete a candidate correctly from the user database even if it starts with a prefix to be stripped from tokens (Resolves: rhbz#1411676)
* Trigger emoji lookup when the input starts or ends with '_' or ' '
* Better handling of BackSpace and Delete when reaching the ends of the preëdit (Resolves: rhbz#1411688)
* Search for hunspell dictionaries in a list of directories (Resolves: https://github.com/mike-fabian/ibus-typing-booster/issues/6)

* Author: Mike FABIAN <mfabian@redhat.com>
* 08 Dec 2016 Released 1.5.15 version
* Default value for self._show_status_info_in_auxiliary_text should be True
* Don’t use keyword arguments when instantiating IBus.LookupTable()
* Add an option to choose the orientation of the lookup table
* Update translations from zanata (de, pl, and uk updated)
* Update emojione.json

* Author: Mike FABIAN <mfabian@redhat.com>
* 25 Nov 2016 Released 1.5.14 version
* Reopen preëdit not only on Backspace but also on Delete and arrow keys
* Fix "delete whitespace when committing punctuation" problem in firefox (Resolves rhbz#1399192)
* Add pt_BR translations from zanata. Update uk, pl, and de translations from zanata.
* Add an option to show/hide the status information in the auxiliary text
* Use ballot box characters in front of the mode indicators in the auxiliary text

* Author: Mike FABIAN <mfabian@redhat.com>
* 20 Nov 2016 Released 1.5.13 version